# watchcat

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: build-desktop.yml  release-desktop.yml
agents/: reset-handoff.md  router.md
docs/: build.md  incident-log.md
tests/: README.md  test_main.py
watchcat_app/: __init__.py  monitor.py  path_fixer.py  picker.py  platform.py  ui.py  unicode_utils.py
