[project]
name = "watchcat"
version = "1.0.14"
description = "macOS NFD to NFC Converter"
requires-python = ">=3.10"
dependencies = [
    "flet",
    "watchdog",
    "certifi"
]

[tool.flet]
product = "watchcat"
artifact = "watchcat"

[tool.flet.app]
module = "main.py"
exclude = [
    "tests",
    ".venv",
    ".claude",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".hypothesis",
    "htmlcov",
    ".coverage",
]

[tool.flet.cleanup]
app_files = [
    "test_*.py",
    "conftest.py",
]

[tool.flet.flutter.pubspec.dependency_overrides]
connectivity_plus = "7.0.0"
device_info_plus = "12.3.0"
